[gd_scene load_steps=12 format=2]

[ext_resource path="res://Character/FPSCharacter.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Shotgun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/WeaponPivot.gd" type="Script" id=3]
[ext_resource path="res://Character/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Weapons/Pistol.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CylinderShape" id=2]
radius = 0.4
height = 0.1

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 0.297302 ),
"update": 0,
"values": [ Vector3( 0, 0.07, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.0195584, -0.0221697, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="FPSCharacter" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 1 )
crouch_height = 0.7
weapon_1 = ExtResource( 2 )
weapon_2 = ExtResource( 5 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 2 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55383, 0 )

[node name="RecoilPivot" type="Spatial" parent="Pivot"]

[node name="Camera" type="Camera" parent="Pivot/RecoilPivot"]
cull_mask = 1048573
fov = 90.0
script = ExtResource( 4 )

[node name="ZoomTween" type="Tween" parent="Pivot/RecoilPivot/Camera"]

[node name="WeaponPivot" type="Spatial" parent="Pivot/RecoilPivot"]
script = ExtResource( 3 )
sway_left = Vector3( 0, 0.2, 0 )
sway_right = Vector3( 0, -0.2, 0 )
hand_target_pos = Vector3( 0, -0.11, -0.454 )

[node name="Hand" type="Spatial" parent="Pivot/RecoilPivot/WeaponPivot"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.226, -0.242, -0.529 )
__meta__ = {
"_editor_description_": ""
}

[node name="AimTween" type="Tween" parent="Pivot/RecoilPivot/WeaponPivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/RecoilPivot/WeaponPivot"]
playback_default_blend_time = 0.2
playback_speed = 2.0
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="CrouchTween" type="Tween" parent="."]

[node name="RecoilTween" type="Tween" parent="."]
playback_speed = 0.1
playback/speed = 0.1

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BufferedJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Model" type="Spatial" parent="."]

[node name="CSGCylinder" type="CSGCylinder" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.745033, 0 )
layers = 2
radius = 0.424513
height = 1.46845
__meta__ = {
"_editor_description_": ""
}

[node name="CSGSphere" type="CSGSphere" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.68612, 0 )
layers = 2
radius = 0.25

[node name="NetworkUtils" type="Node" parent="."]

[node name="PositionTween" type="Tween" parent="NetworkUtils"]

[connection signal="tween_all_completed" from="RecoilTween" to="." method="_on_RecoilTween_tween_all_completed"]
